Improve Interfaces folder structure inside Portal.Application + move files in

--- a/backend/Portal.Application/Portal.Application.csproj
+++ b/backend/Portal.Application/Portal.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Portal.DAL\Portal.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Inner\" />
+  </ItemGroup>
+
 </Project>
