--- a/backend/Portal/Portal.UI-Console.csproj
+++ b/backend/Portal/Portal.UI-Console.csproj
@@ -3,8 +3,18 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+	<RootNamespace>Portal.UI_Console</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Portal.Application\Portal.Application.csproj" />
+    <ProjectReference Include="..\Portal.Persistence-Json\Portal.Persistence-Json.csproj" />
+  </ItemGroup>
 
 </Project>
