Add ArticleRegex to app.config

--- a/backend/Portal.Application/App.config
+++ b/backend/Portal.Application/App.config
@@ -2,5 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="BookRegex" value="([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([ \-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+), ([0-9]+) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)(\.[a-z]+)"/>
+		<add key="ArticleRegex" value="([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ((?:http|ftp|https):\/\/(?:[\w_-]+(?:(?:\.[\w_-]+)+))(?:[\w.,@?^=%:\/~+#-]*[\w@?^=%\/~+#-])) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)"/>
 	</appSettings>
 </configuration>
