--- a/backend/Portal/Portal.UI-Console.csproj
+++ b/backend/Portal/Portal.UI-Console.csproj
@@ -18,7 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="CommandManagement\ChooseCommand\" />
     <Folder Include="ConsoleCommands\Get\" />
+    <Folder Include="ConsoleCommands\Modify\Course\" />
     <Folder Include="ConsoleCommands\Other\" />
   </ItemGroup>
 
