PaginateCommand and App.Config modify to store paginated page size in config file

--- a/backend/Portal/App.config
+++ b/backend/Portal/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+		<add key="PaginatedPageSize" value="3"/>
 		<add key="BookRegex" value="([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([ \-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+), ([0-9]+) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)(\.[a-z]+)"/>
 		<add key="ArticleRegex" value="([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ((?:http|ftp|https):\/\/(?:[\w_-]+(?:(?:\.[\w_-]+)+))(?:[\w.,@?^=%:\/~+#-]*[\w@?^=%\/~+#-])) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)"/>
 	</appSettings>
