Finish RemoveArticleCommand implementation of IConsoleCommand + changes to connected commands + move to folders

--- a/backend/Portal/Portal.UI-Console.csproj
+++ b/backend/Portal/Portal.UI-Console.csproj
@@ -19,6 +19,8 @@
 
   <ItemGroup>
     <Folder Include="ConsoleCommands\Get\" />
+    <Folder Include="ConsoleCommands\Modify\Materials\Book\" />
+    <Folder Include="ConsoleCommands\Modify\Materials\Video\" />
   </ItemGroup>
 
 </Project>
