Add regexes for video parsing and modifing materials

--- a/backend/Portal/App.config
+++ b/backend/Portal/App.config
@@ -2,7 +2,11 @@
 <configuration>
 	<appSettings>
 		<add key="PaginatedPageSize" value="3"/>
+		<add key="VideoRegex" value="([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([0-9]+)p, ((?:\d{2}:\d{2}:\d{2}))"/>
 		<add key="BookRegex" value="([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([ \-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+), ([0-9]+) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)(\.[a-z]+)"/>
 		<add key="ArticleRegex" value="([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ((?:http|ftp|https):\/\/(?:[\w_-]+(?:(?:\.[\w_-]+)+))(?:[\w.,@?^=%:\/~+#-]*[\w@?^=%\/~+#-])) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)"/>
+		<add key="ModifyVideoRegex" value="([0-9]+) - ([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([0-9]+)p, ((?:\d{2}:\d{2}:\d{2}))"/>
+		<add key="ModifyBookRegex" value="([0-9]+) - ([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([ \-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+), ([0-9]+) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)(\.[a-z]+)"/>
+		<add key="ModifyArticleRegex" value="([0-9]+) - ([ \.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ((?:http|ftp|https):\/\/(?:[\w_-]+(?:(?:\.[\w_-]+)+))(?:[\w.,@?^=%:\/~+#-]*[\w@?^=%\/~+#-])) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)"/>
 	</appSettings>
 </configuration>
