Change directories names to its respective projects

--- a/backend/Portal.Application/Portal.Application.csproj
+++ b/backend/Portal.Application/Portal.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Portal.DAL\Portal.Domain.csproj" />
+    <ProjectReference Include="..\Portal.Domain\Portal.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
