Persistence-EF-Core rename DI register method + register dependencies + add call to Program.cs

--- a/backend/Portal.UI-Console/Portal.UI-Console.csproj
+++ b/backend/Portal.UI-Console/Portal.UI-Console.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Portal.Application\Portal.Application.csproj" />
+    <ProjectReference Include="..\Portal.Persistence-EF-Core\Portal.Persistence-EF-Core.csproj" />
     <ProjectReference Include="..\Portal.Persistence-Json\Portal.Persistence-Json.csproj" />
   </ItemGroup>
 
