Change BookDomain Authors property + add IConfigService field to PortalContext + add its use to OnConfiguring

--- a/backend/Portal.UI-Console/App.config
+++ b/backend/Portal.UI-Console/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="DbConnectionString" value="Data Source=(localdb)\\MSSQLLocalDB;Database=EducationalPortal;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
+		<add key="DbConnectionString" value="Data Source=(localdb)\MSSQLLocalDB;Database=EducationalPortal;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
 		<add key="PaginatedPageSize" value="3"/>
 		<add key="VideoRegex" value="([ \,\.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([0-9]+)p, ((?:\d{2}:\d{2}:\d{2}))"/>
 		<add key="BookRegex" value="([ ,\.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([ \-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+), ([0-9]+) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)(\.[a-z]+)"/>
