Fix CourseService + Fix ChooseInitCommand + App.config add ModifyPerkRegex

--- a/backend/Portal.UI-Console/App.config
+++ b/backend/Portal.UI-Console/App.config
@@ -9,5 +9,6 @@
 		<add key="ModifyVideoRegex" value="([0-9]+) - ([ \,\.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([0-9]+)p, ((?:\d{2}:\d{2}:\d{2}))"/>
 		<add key="ModifyBookRegex" value="([0-9]+) - ([ \,\.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ([ \-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+), ([0-9]+) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)(\.[a-z]+)"/>
 		<add key="ModifyArticleRegex" value="([0-9]+) - ([ \,\.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+) - ((?:http|ftp|https):\/\/(?:[\w_-]+(?:(?:\.[\w_-]+)+))(?:[\w.,@?^=%:\/~+#-]*[\w@?^=%\/~+#-])) \(((?:\d{2}\.\d{2}\.\d{4})|(?:\d{2}\/\d{2}\/\d{4})|(?:\d+))\)"/>
+		<add key="ModifyPerkRegex" value="([0-9]+) - ([ \,\.\-a-zA-Zа-яА-ЯёЁіІїЇєЄґҐ]+)"/>
 	</appSettings>
 </configuration>
