Persistence EF Core add separate DI registration of db context in RegisterDbContextXml

--- a/backend/Portal.UI-MVC-Web/Portal.UI-MVC-Web.csproj
+++ b/backend/Portal.UI-MVC-Web/Portal.UI-MVC-Web.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Portal.Application\Portal.Application.csproj" />
+    <ProjectReference Include="..\Portal.Persistence-EF-Core\Portal.Persistence-EF-Core.csproj" />
   </ItemGroup>
 
 </Project>
