Web UI remove mapping and mapper profiles + delete ArticleListModel + finish Index in ArticleController

--- a/backend/Portal.UI-MVC-Web/Portal.UI-MVC-Web.csproj
+++ b/backend/Portal.UI-MVC-Web/Portal.UI-MVC-Web.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\Portal.Persistence-EF-Core\Portal.Persistence-EF-Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
