--- a/backend/Portal.UI-MVC-Web/Portal.UI-MVC-Web.csproj
+++ b/backend/Portal.UI-MVC-Web/Portal.UI-MVC-Web.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="jQuery" Version="3.6.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
