Create ModifyCourseModel and ChooseArticleModel view models

--- a/backend/Portal.UI-MVC-Web/Portal.UI-MVC-Web.csproj
+++ b/backend/Portal.UI-MVC-Web/Portal.UI-MVC-Web.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Models\Course\" />
+    <Folder Include="Services\" />
     <Folder Include="Views\Course\" />
   </ItemGroup>
 
