Integrate validation to DI

--- a/backend/Portal.UI-MVC-Web/appsettings.json
+++ b/backend/Portal.UI-MVC-Web/appsettings.json
@@ -7,8 +7,8 @@
   },
 
   "ConnectionStrings": {
-    //"Default": "Data Source=(localdb)\\MSSQLLocalDB;Database=EducationalPortal;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    "Default": "Server=tcp:portal-ui-mvc-webdbserver.database.windows.net,1433;Initial Catalog=Portal.UI-MVC-Web_db;Persist Security Info=False;User ID=AdminAdmin;Password=#TkaiSpKM2r3jx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Database=EducationalPortal;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"Default": "Server=tcp:portal-ui-mvc-webdbserver.database.windows.net,1433;Initial Catalog=Portal.UI-MVC-Web_db;Persist Security Info=False;User ID=AdminAdmin;Password=#TkaiSpKM2r3jx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "AllowedHosts": "*"
